# juce-test

./: .gitignore  CMakeLists.txt  Makefile
_docs/: setup.md  test-memo.md
docs/: README.md  memo.md  setup..md
src/AudioPlugin/: PluginProcessor.h
test/: CMakeLists.txt  test.cpp
